# RiskLensAI

./: .gitignore  README.md  preprocessor_def.py  pyproject.toml  requirements.txt  risklens_excel_template (1).xlsx  ~$risklens_excel_template (1).xlsx
app/: streamlit_app.py
artifacts/: explainer.joblib  metadata.json  model.joblib  preprocessor.joblib
docs/: export_artifacts_cell.md
src/risklens_ai/: __init__.py  artifacts.py  data_dictionary.py  excel_parser.py  explainability.py  memo.py  pdf_report.py  questions.py  scoring.py
src/risklens_ai/samples/: __init__.py  sample_company.json
tests/: test_memo_report.py
